--- a/src/templates/Categorias.html
+++ b/src/templates/Categorias.html
@@ -40,7 +40,7 @@
                         <input type="text" class="form-control" id="categoria" name="categoria">
                     </div>
                     <div class="mb-3">
-                        <label for="ESTATUS" class="form-label">Estado</label>
+                        <label for="ESTATU" class="form-label">Estado</label>
                         <select class="form-select" id="ESTATUS" name="ESTATUS">
                             <option value="">Seleccionar</option>
                             <option value="activo">Activo</option>
